test/classicalQfree2.slq
def my_true()wild:!ğ”¹{
	return true;
}

def my_id(x:ğ”¹)lifted:ğ”¹{
	return x;
}

def main()lifted{
	x := my_id(my_true()); // error
	assert(x);
	assert(my_id(my_true())); // error
}
